# rust-wgpu-compute

./: .gitignore  Cargo.toml  LICENSE  package.json  rollup.config.js  rust-toolchain.toml
crates/wgpu-compute/: Cargo.toml
crates/wgpu-compute-macro/: Cargo.toml
crates/wgpu-compute-macro/src/: generate.rs  lib.rs
crates/wgpu-compute/src/: buffer.rs  cpu.rs  gpu.rs  lib.rs  util.rs
src/: cubecl.rs  lib.rs  shader.wgsl  util.wgsl
