[package]
name = "gpu"
version = "0.1.0"
authors = []
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
log = "0.4.29"
console_log = "1.0.0"

wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.58"

futures = "0.3.31"
wgpu = "28.0.0"
bytemuck = "1.25.0"
rayon = "1.11.0"

wgpu-compute = { path = "./crates/wgpu-compute" }
#wgpu-compute-macro = { path = "./crates/wgpu-compute-macro" }

#cubecl = { version = "0.9.0", features = ["wgpu"] }
#cubecl-common = { version = "0.9.0", features = ["serde"] }
#getrandom = { version = "0.3.0", features = ["wasm_js"] }
#serde_json = "1.0.149"

[workspace]
members = [
    "crates/wgpu-compute",
    "crates/wgpu-compute-macro",
]
